--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,10 @@ src: url('../fonts/roboto.ttf');
   src: url('../fonts/bastian.ttf');
 }
 
+#title-spacing {
+  padding-left: -100px;
+}
+
 h1 {
   font-family: 'neon';
   font-size: 70px;
@@ -53,45 +57,94 @@ a:hover {
 }
 
 header {
-  margin-top: 120px;
+  height: 100vh;
+  margin-bottom: 280px;
 }
 
+#headerImg {
+  margin-top: 200px;
+
+}
+
+#downarrow {
+  position: relative;
+  top: 190px;
+  font-size: 90px;
+}
 /* from old portfolio */
 
-h3 {
-  font-family: 'bastian';
-  font-size: 5vw;
-  font-weight: lighter;
-  padding: 0px 60px;
-  margin-top: 0px;
+section {
+  padding-top: 70px;
 }
 
-/* give each section padding so they aren't touching each other */
-section {
-  padding-top: 100px;
+/* section header font styling */
+h3 {
+  font-family: 'acetone';
+  font-size: 40px;
+  font-weight: lighter;
+  text-align: center;
 }
+
+/* ABOUT SECTION */
 
 #about {
+  padding-top: 150px;
   margin-left: auto;
   margin-right: auto;
-  width: 600px;
-  height: 200px;
+  width: 800px;
 }
 
 #about h3 {
-  float: left;
-  margin-bottom: 100px;
+  font-size: 50px;
+  padding-bottom: 10px;
 }
 
-/* center about section image and paragraph */
-#about img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40vw;
+.aboutWrapper {
+  padding-bottom: 150px;
+  background-color: #7510f6;
 }
 
+#about p {
+  text-align: center;
+  font-family: 'roboto';
+  font-size: 20px;
+  font-weight: lighter;
+}
+
+.about-cards {
+  width: 800px;
+  position: relative;bottom: 500px;
+  left: 50%;
+
+  transform: translate(-50%, 50%);
+}
+
+.icons {
+  padding: 50px 0px;
+  width: 50px;
+  position: relative;
+  left: 45%;
+  transform: translate(50% 50%);
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+h5, h6 {
+  color: #7510f6;
+}
+
+h5:hover, h6:hover {
+  opacity: .8;
+
+}
 /* WORK SECTION */
+
+#work {
+  margin-top: 400px;
+}
 
 /* spacing above gallery and header */
 .gallery {
@@ -110,7 +163,7 @@ section {
 /* make first gallery image 100% width and 50% height to meet acceptance criteria */
 .gallery figure:first-child {
   width: 100%;
-  height: 50%;
+  height: 30%;
 }
 
 /* make each image fit it's own container rather than being full size */
@@ -130,20 +183,20 @@ section {
 
 /* when hovering over the image, opacity becomes 0.5 and grayscale appears  */
 .gallery figure:hover {
-  opacity: 0.5;
-  filter: grayscale(100%);
+  opacity: 0.8;
+  filter: grayscale(50%);
 }
 
-/* figcaption is used for the title of each image "Example 5", etc */
+/* figcaption is used for the title of each image, "Example 5", etc */
 figcaption {
   font-size: 4vw;
   text-align: center;
-  font-family: bastian;
+  font-family: 'bastian';
   color: white;
   position: absolute;
   left: 50%;
   bottom: 30px;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 50%);
 } 
 
 /* change font-size for first figure as its displayed at a different size */
@@ -153,13 +206,6 @@ figcaption {
 
 /* CONTACT SECTION */
 
-
-#contact {
-  position: relative;
-  width: 100%;
-  margin: auto;
-}
-
 #contact h3 {
   padding: 50px;
   margin-top: -150px;
@@ -167,7 +213,7 @@ figcaption {
 
 /* space all buttons evenly and display flex */
 .contact-list ul {
-  padding-left: 40px;
+  padding-left: 0px;
   position: absolute;
   left: 50%;
   transform: translate(-50%, -50%);
