--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ h1 {
   margin-left: 15px;
 }
 
-a:hover {
+nav a:hover {
   opacity: .5;
   transition: all .3s ease;
 }
@@ -140,10 +140,16 @@ h5:hover, h6:hover {
   opacity: .8;
 
 }
+
+
+
+
+
 /* WORK SECTION */
 
 #work {
-  margin-top: 400px;
+  position: relative;
+  bottom: 100px;
 }
 
 /* spacing above gallery and header */
@@ -155,7 +161,7 @@ h5:hover, h6:hover {
 .gallery figure {
   width: 33.3%;
   padding: 20px;
-  opacity: 0.8;
+  opacity: .9;
   transition: all .2s ease;
   filter: grayscale(0%)
 }
@@ -163,7 +169,7 @@ h5:hover, h6:hover {
 /* make first gallery image 100% width and 50% height to meet acceptance criteria */
 .gallery figure:first-child {
   width: 100%;
-  height: 30%;
+  height: 15%;
 }
 
 /* make each image fit it's own container rather than being full size */
@@ -173,7 +179,6 @@ h5:hover, h6:hover {
 
 /* position the gallery, give it a width */
 .gallery {
-  position: relative;
   display: flex;
   flex-wrap: wrap;
   width: 70%;
@@ -182,26 +187,26 @@ h5:hover, h6:hover {
 }
 
 /* when hovering over the image, opacity becomes 0.5 and grayscale appears  */
-.gallery figure:hover {
-  opacity: 0.8;
-  filter: grayscale(50%);
-}
+/* .gallery figure:hover {
+  filter: grayscale(100%);
+} */
 
 /* figcaption is used for the title of each image, "Example 5", etc */
 figcaption {
-  font-size: 4vw;
+  font-size: 24px;
   text-align: center;
   font-family: 'bastian';
   color: white;
   position: absolute;
   left: 50%;
-  bottom: 30px;
+  bottom: 50px;
   transform: translate(-50%, 50%);
 } 
 
 /* change font-size for first figure as its displayed at a different size */
 #fig1 {
-  font-size: 4vw;
+  bottom: 100px;
+  font-size: 50px;
 }
 
 /* CONTACT SECTION */
@@ -247,4 +252,21 @@ footer {
 
 h4 {
   font-size: 14px;
+}
+
+.overlay {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  opacity: 0;
+  transition: .4s ease;
+  color: white;
+  font-family: 'bastian';
+}
+
+.container:hover .overlay {
+  opacity: 1;
 }
